k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-2
  labels:
    app: project-2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: project-2
  template:
    metadata:
      labels:
        app: project-2
    spec:
      containers:
      - name: project-2
        image: yishu91/project-2:v1
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
        ports:
        - containerPort: 8080
