k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-2-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: project-2.local
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: project-2-service
            port:
              number: 8080
